# synaplex

./: Cargo.toml  README.md  pyproject.toml
python/synaplex/: __init__.py  __init__.pyi
python/synaplex/complex/: __init__.pyi
python/synaplex/diagram/: __init__.pyi
python/synaplex/distance/: __init__.pyi
python/synaplex/homology/: __init__.pyi
python/synaplex/mapper/: __init__.pyi
python/synaplex/neural/: __init__.pyi
src/: error.rs  lib.rs
src/complex/: filtration.rs  mod.rs  simplex.rs  vietoris_rips.rs
src/diagram/: barcode.rs  bottleneck.rs  mod.rs  persistence_diagram.rs  wasserstein.rs
src/distance/: knn.rs  matrix.rs  metrics.rs  mod.rs  sparse_matrix.rs
src/homology/: betti.rs  boundary.rs  coboundary.rs  coefficients.rs  cohomology.rs  entry.rs  mod.rs  persistent.rs  reduction.rs
src/mapper/: clustering.rs  cover.rs  graph.rs  mod.rs  nerve.rs
src/neural/: activation.rs  landscape.rs  layer_compare.rs  mod.rs  weights.rs
src/python/: convert.rs  mod.rs  py_complex.rs  py_diagram.rs  py_distance.rs  py_homology.rs  py_mapper.rs  py_neural.rs
src/utils/: combinatorics.rs  mod.rs  parallel.rs  union_find.rs
