[package]
name = "synaplex"
version = "0.1.0"
edition = "2024"

[lib]
name = "synaplex"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
ndarray = { version = "0.17.2", features = ["rayon"] }
pyo3 = { version = "0.28.2" }
numpy = "0.28"
rayon = "1.11.0"
num-traits = "0.2"
ordered-float = "5"
petgraph = "0.8"
thiserror = "2"
pyo3-stub-gen = "0.19.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
